[package]
name = "pirox"
description = "Library for building a calculator."
repository = "https://codeberg.org/ppsn/Pirox.git"
license = "MIT"
version = "0.0.2"
edition = "2021"

[lib]
name = "pirox"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
string-builder = "0.2.0"
wasm-bindgen = "0.2.87"
